<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:layout_alignParentTop="true"
        android:background="@color/common_top_bar_gray" >


        <TextView
            android:id="@+id/tv_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="2dp"
            android:textSize="17sp"
            android:text="@string/menu"
            android:textColor="@color/colorWhite" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/toolbar_second_wrap"
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:background="@color/colorGray"

        >

        <RelativeLayout
            android:id="@+id/sub_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/toolbar_menu_menu_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"

                android:focusable="false"

                android:src="@drawable/th_cutlery_oc" />

            <TextView
                android:id="@+id/toolbar_menu_menu_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar_menu_menu_image"
                android:text="@string/toolbar_menu_menu_text"
                android:layout_centerHorizontal="true"
                android:textSize="20dp"
                android:layout_marginLeft="2dp"
                android:textColor="@color/colorWhite"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sub_plates"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">


            <ImageView
                android:id="@+id/toolbar_menu_plate_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingLeft="3dp"
                android:src="@drawable/th_chocolate_oc" />

            <TextView
                android:id="@+id/toolbar_menu_plate_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar_menu_plate_image"
                android:text="@string/toolbar_menu_plate_text"
                android:textSize="20dp"
                android:textColor="@color/colorWhite"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sub_deals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/toolbar_menu_deals_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:src="@drawable/th_hamburger_oc"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/toolbar_menu_deals_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar_menu_deals_image"
                android:text="@string/toolbar_menu_deals_text"
                android:textSize="20dp"
                android:textColor="@color/colorWhite"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sub_offers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/toolbar_menu_offer_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:src="@drawable/time"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/toolbar_menu_offer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar_menu_offer_image"
                android:text="@string/toolbar_menu_offer_text"
                android:textSize="20dp"
                android:textColor="@color/colorWhite"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </LinearLayout>


    <FrameLayout
        android:id="@+id/FramePager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_second_wrap" >
    </FrameLayout>


    <ImageView
        android:id="@+id/imv_tabline"
        android:layout_width="100dp"
        android:layout_height="3dp"

        android:background="@color/common_top_bar_gray"
        android:layout_alignTop="@id/FramePager"/>


</RelativeLayout>
