<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ebebeb"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/re_myInfo"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="18dp"
        android:clickable="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_list_item_bg"
        android:paddingBottom="8dp"
        android:paddingTop="8dp" >

        <ImageView
            android:id="@+id/profile_photo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/default_userphoto" />

        <LinearLayout
            android:id="@+id/ll_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/profile_photo"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="username"
                android:textColor="#353535"
                android:textSize="18sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/text_userId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@id/profile_photo"
            android:text="@string/userID"
            android:textColor="#AAAAAA"
            android:textSize="15sp" />



    </RelativeLayout>


    <RelativeLayout
        android:layout_marginTop="20dp"
        android:id="@+id/re_wallet"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true"
        android:paddingLeft="12dp" >

        <ImageView
            android:id="@+id/img_wallet"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/wallet" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/img_wallet"
            android:text="@string/wallet"
            android:textColor="#353535"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="12dp"
            android:background="#dadada" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_marginTop="20dp"
        android:id="@+id/re_setting"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true"
        android:paddingLeft="12dp" >

        <ImageView
            android:id="@+id/img_setting"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/setting" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/img_setting"
            android:text="@string/settings"
            android:textColor="#353535"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>
